[gd_scene load_steps=9 format=2]

[ext_resource path="res://HUD.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Album.tscn" type="PackedScene" id=3]
[ext_resource path="res://AlbumShelf.tscn" type="PackedScene" id=4]
[ext_resource path="res://RecordPlayer.tscn" type="PackedScene" id=5]
[ext_resource path="res://Phone.tscn" type="PackedScene" id=6]
[ext_resource path="res://art/phone-speaker.png" type="Texture" id=7]
[ext_resource path="res://art/gas-station-bg.jpg" type="Texture" id=8]

[node name="Main" type="Node"]
script = ExtResource( 2 )
Album = ExtResource( 3 )

[node name="Wallpaper" type="Sprite" parent="."]
modulate = Color( 0.470588, 0.462745, 0.462745, 1 )
position = Vector2( 515.194, 301.55 )
scale = Vector2( 0.4186, 0.4186 )
texture = ExtResource( 8 )

[node name="HUD" parent="." instance=ExtResource( 1 )]

[node name="AlbumShelf" parent="." instance=ExtResource( 4 )]
position = Vector2( 250.501, 246.991 )

[node name="AlbumShelf2" parent="." instance=ExtResource( 4 )]
position = Vector2( 585.076, 243.467 )

[node name="AlbumInbox" parent="." instance=ExtResource( 4 )]
position = Vector2( 211.608, 508.975 )

[node name="RecordPlayer" parent="." instance=ExtResource( 5 )]
position = Vector2( 749.579, 391.28 )

[node name="PhoneSpeaker" type="Sprite" parent="."]
position = Vector2( 77.238, 78.8206 )
texture = ExtResource( 7 )

[node name="Phone" parent="." instance=ExtResource( 6 )]
position = Vector2( 43.4754, 383.784 )

[node name="NewAlbumTimer" type="Timer" parent="."]
wait_time = 20.0

[node name="NewPhoneTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="NoAnswerPhoneTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="HPCountdownTimer" type="Timer" parent="."]
[connection signal="timeout" from="NewAlbumTimer" to="." method="_on_NewAlbumTimer_timeout"]
[connection signal="timeout" from="NewPhoneTimer" to="." method="_on_NewPhoneTimer_timeout"]
[connection signal="timeout" from="NoAnswerPhoneTimer" to="." method="_on_NoAnswerPhoneTimer_timeout"]
[connection signal="timeout" from="HPCountdownTimer" to="." method="_on_HPCountdownTimer_timeout"]
